# orm-django-example

./: .env  .gitignore  README.md  manage.py  pyproject.toml
OrmExample/: asgi.py  settings.py  urls.py  wsgi.py
apps/core/: handlers.py  managers.py  models.py
apps/core/examples/: basics.py
apps/core/fixtures/: initial.json
apps/core/management/commands/: seed.py
apps/core/migrations/: 0001_initial.py  0002_inbox.py  0002_party_null_fields.py  0003_party_name_length.py  0003_unique_color_name_parties.py  0004_allow_empty_end_at.py  0005_party_types.py  0006_extra_party_types.py
apps/core/tests/: test_basics.py
docs/: ORM DBS.mwb
