[tool.poetry]
name = "ormexample"
version = "0.1.0"
description = ""
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
python-dotenv = "^0.12.0"
django-enum-choices = "^2.1.2"
psycopg2-binary = "^2.8.4"
pytest = "^5.4.1"
pytest-django = "^3.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
