[tool.poetry]
name = "ormexample"
version = "0.1.0"
description = ""
authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.0"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
pytest = "^7.1.1"
pytest-django = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
