[tool.poetry]
name = "ormexample"
version = "2024.1"
description = ""
authors = ["Jakub Dubec <jakub.dubec@stuba.sk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
python-dotenv = "^1.0"
psycopg = {version = "^3.1", extras = ["c"]}
pytest = "^8.1"
pytest-django = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
